// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transaction Transaction create when called with a valid transaction should return created tx 1`] = `
Array [
  "74b756f5811b48f6f49aca3d312e798beb9f24ec0841982e5da74ea7d2d0a5ccc68b10cdea7873bf003dee81c397f83fd2451b303023105f8fcfdcd5cfb34c05",
]
`;

exports[`transaction Transaction create when called with multi-signature account in input should return created tx 1`] = `
Array [
  "74b756f5811b48f6f49aca3d312e798beb9f24ec0841982e5da74ea7d2d0a5ccc68b10cdea7873bf003dee81c397f83fd2451b303023105f8fcfdcd5cfb34c05",
  "",
]
`;

exports[`transaction Transaction create when called with nonce equal to zero in input should return created tx 1`] = `
Array [
  "0ead19c6dc79f0a43cf1faa5c9e12a56b0a084db17bc8a2cafdbac597aaac5d456ffa24063ee801402f4a03201c4042229493a80f737e9165a355598e9e8210b",
]
`;

exports[`transaction Transaction create when called with optional keys in input should return created tx 1`] = `
Array [
  "74b756f5811b48f6f49aca3d312e798beb9f24ec0841982e5da74ea7d2d0a5ccc68b10cdea7873bf003dee81c397f83fd2451b303023105f8fcfdcd5cfb34c05",
]
`;

exports[`transaction Transaction create when called without sender public key in input should return created tx 1`] = `
Array [
  "74b756f5811b48f6f49aca3d312e798beb9f24ec0841982e5da74ea7d2d0a5ccc68b10cdea7873bf003dee81c397f83fd2451b303023105f8fcfdcd5cfb34c05",
]
`;

exports[`transaction Transaction decode transaction from input as buffer should return decoded transaction 1`] = `
Object {
  "command": "transfer",
  "fee": 10000000n,
  "id": Object {
    "data": Array [
      116,
      198,
      128,
      147,
      238,
      181,
      55,
      166,
      114,
      181,
      57,
      160,
      183,
      70,
      212,
      192,
      169,
      102,
      248,
      94,
      221,
      18,
      148,
      116,
      213,
      248,
      112,
      41,
      174,
      250,
      16,
      185,
    ],
    "type": "Buffer",
  },
  "module": "token",
  "nonce": 54n,
  "params": Object {
    "amount": 10000000n,
    "data": "",
    "recipientAddress": Object {
      "data": Array [
        101,
        64,
        135,
        194,
        223,
        135,
        4,
        2,
        171,
        11,
        25,
        150,
        97,
        111,
        211,
        53,
        93,
        97,
        246,
        44,
      ],
      "type": "Buffer",
    },
  },
  "senderPublicKey": Object {
    "data": Array [
      221,
      79,
      242,
      85,
      254,
      4,
      221,
      1,
      89,
      164,
      104,
      233,
      233,
      200,
      135,
      44,
      79,
      68,
      102,
      34,
      15,
      126,
      50,
      99,
      119,
      160,
      206,
      185,
      223,
      47,
      162,
      26,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        121,
        203,
        41,
        220,
        167,
        187,
        159,
        206,
        115,
        161,
        232,
        202,
        40,
        38,
        79,
        119,
        144,
        116,
        210,
        89,
        195,
        65,
        181,
        54,
        186,
        233,
        165,
        76,
        10,
        46,
        71,
        19,
        88,
        15,
        203,
        25,
        47,
        159,
        21,
        244,
        55,
        48,
        101,
        13,
        105,
        187,
        31,
        61,
        207,
        180,
        203,
        109,
        167,
        214,
        156,
        169,
        144,
        167,
        99,
        237,
        120,
        86,
        151,
        0,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`transaction Transaction decode transaction from input as hex should return decoded transaction 1`] = `
Object {
  "command": "transfer",
  "fee": 10000000n,
  "id": Object {
    "data": Array [
      116,
      198,
      128,
      147,
      238,
      181,
      55,
      166,
      114,
      181,
      57,
      160,
      183,
      70,
      212,
      192,
      169,
      102,
      248,
      94,
      221,
      18,
      148,
      116,
      213,
      248,
      112,
      41,
      174,
      250,
      16,
      185,
    ],
    "type": "Buffer",
  },
  "module": "token",
  "nonce": 54n,
  "params": Object {
    "amount": 10000000n,
    "data": "",
    "recipientAddress": Object {
      "data": Array [
        101,
        64,
        135,
        194,
        223,
        135,
        4,
        2,
        171,
        11,
        25,
        150,
        97,
        111,
        211,
        53,
        93,
        97,
        246,
        44,
      ],
      "type": "Buffer",
    },
  },
  "senderPublicKey": Object {
    "data": Array [
      221,
      79,
      242,
      85,
      254,
      4,
      221,
      1,
      89,
      164,
      104,
      233,
      233,
      200,
      135,
      44,
      79,
      68,
      102,
      34,
      15,
      126,
      50,
      99,
      119,
      160,
      206,
      185,
      223,
      47,
      162,
      26,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        121,
        203,
        41,
        220,
        167,
        187,
        159,
        206,
        115,
        161,
        232,
        202,
        40,
        38,
        79,
        119,
        144,
        116,
        210,
        89,
        195,
        65,
        181,
        54,
        186,
        233,
        165,
        76,
        10,
        46,
        71,
        19,
        88,
        15,
        203,
        25,
        47,
        159,
        21,
        244,
        55,
        48,
        101,
        13,
        105,
        187,
        31,
        61,
        207,
        180,
        203,
        109,
        167,
        214,
        156,
        169,
        144,
        167,
        99,
        237,
        120,
        86,
        151,
        0,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`transaction Transaction sign when called with multi-signature account in input should return created tx 1`] = `
Array [
  "74b756f5811b48f6f49aca3d312e798beb9f24ec0841982e5da74ea7d2d0a5ccc68b10cdea7873bf003dee81c397f83fd2451b303023105f8fcfdcd5cfb34c05",
  "c4abb779efc9bdf447824d6c40eff7b3a014c9b47af3fb7e7237f02fde66c7b36d24ff020f291eaee67a2feb191b31aead4a99b76e88a82e96a16c1a13c9b100",
]
`;

exports[`transaction Transaction sign when called with optional keys in input should return created tx 1`] = `
Array [
  "74b756f5811b48f6f49aca3d312e798beb9f24ec0841982e5da74ea7d2d0a5ccc68b10cdea7873bf003dee81c397f83fd2451b303023105f8fcfdcd5cfb34c05",
  "c4abb779efc9bdf447824d6c40eff7b3a014c9b47af3fb7e7237f02fde66c7b36d24ff020f291eaee67a2feb191b31aead4a99b76e88a82e96a16c1a13c9b100",
]
`;
